Fixes random whitespace to the right of page
-caused by <p> places outside of container in contact page

--- a/app/styles/dimensions.scss
+++ b/app/styles/dimensions.scss
@@ -11,7 +11,6 @@ $margin-bottom: 3rem;
   margin-top: 5px;
 }
 .edit-about-me-btn{
-  width: 100%;
   margin: 0 auto;
 }
 
